syntax = "proto3";

option csharp_namespace = "Tradie.Analyzer.Proto";

message ItemDetailProperties {
  string name = 1;
  uint32 flags = 2;
  uint32 influences = 3;
  uint32 itemLevel = 4;
}
